--- a/app/domains/blog/posts/views/index.html.erb
+++ b/app/domains/blog/posts/views/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Blog Posts</h1>
+<%= red_h1('Blog Posts') %>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
+      <th><%= blue_color('Title') %></th>
+      <th><%= blue_color('Body') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
